# nuqe

./: .env.example  ARCHITECTURE.md  CLAUDE.md  NUQE_BUILD_PLAN.md  NUQE_CONTEXT.md  NUQE_TECHNICAL_DEBT.md  README.md  docker-compose.yml  render.yaml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
api/: eslint.config.js  jest.config.cjs  package-lock.json  package.json
api/src/: app.js  index.js  logger.js
api/src/db/: database.test.js  migrate.js  pool.js  redis.js
api/src/db/migrations/: 001_initial_schema.sql  002_ai_config_and_review_layer.sql  003_knowledge_base.sql  005_regulatory_monitoring.sql  006_tokeniser_additions.sql  007_knowledge_documents.sql  008_users.sql  009_add_embedding_to_knowledge_chunks.sql  010_org_profile.sql  011_channels.sql  012_email_metadata.sql  013_channel_connection.sql
api/src/db/seeds/: clear_demo_cases.js  demo_data.js  fca_regulations.js  regulatory_knowledge.js
api/src/engines/: communicationEngine.js  communicationEngine.test.js  complianceEngine.js  complianceEngine.test.js  deadlineEngine.js  deadlineEngine.test.js  knowledgeLayer.js  knowledgeLayer.test.js  metricsEngine.js  modelRouter.js  modelRouter.test.js  piiTokeniser.js  piiTokeniser.test.js  regulatoryMonitor.js  regulatoryMonitor.test.js
api/src/jobs/: generateEmbeddings.js  retentionArchiver.js
api/src/lib/: encryption.js
api/src/middleware/: auth.js  validate.js
api/src/queues/: deadlineQueue.js  regulatoryQueue.js  retentionQueue.js
api/src/routes/: ai.js  audit.js  auth.js  auth.test.js  cases.js  cases.test.js  channels.js  communications.js  communications.test.js  compliance.js  customers.js  deadlines.js  deadlines.test.js  knowledge.js  knowledgeMonitoring.js  metrics.js  metrics.test.js  regulatory.js  settings.js  settings.test.js  webhooks.js  webhooks.test.js
api/src/services/: emailService.js  imapService.js  smtpService.js
api/src/utils/: crypto.js
docs/compliance/: ai-provider-zero-retention-checklist.md  data-processing-agreement-template.md  privacy-policy-template.md  terms-of-service-template.md
nuqe_engine/: .env.example  .gitignore  Dockerfile  F1_BUILD_PROMPTS.md  F1_HANDOFF.md  F2_PLAN.md  README.md  docker-compose.yml  pyproject.toml
nuqe_engine/.github/workflows/: ci.yml
nuqe_engine/docs/: admin_role_runbook.md  db_snapshot_runbook.md  f30_audit_log_audit.md  f31_rollback_runbook.md  f33_auth0_setup.md  pool_mode_constraints.md
nuqe_engine/migrations/: 001_initial_schema.sql  002_notifications.sql  004_multi_tenant_foundation.sql  004_multi_tenant_foundation_rollback.sql  005_organisation_libraries.sql
nuqe_engine/nuqe_api/: __init__.py  app.py  deps.py  logging_config.py  metrics.py  models.py  scheduler.py  sentry.py  settings.py
nuqe_engine/nuqe_api/auth/: auth0.py
nuqe_engine/nuqe_api/middleware/: request_id.py
nuqe_engine/nuqe_api/routers/: __init__.py  cases.py  cases_ingest.py  errors.py  events.py  health.py  library.py  metrics_router.py
nuqe_engine/nuqe_engine/: __init__.py  audit.py  cli.py  deadline.py  engine.py  evidence.py  jsparser.py  loader.py  requirement.py  schema.py  sync.py  trigger.py  validator.py
nuqe_engine/scripts/: _apply_migration_005.py  _check_db_state.py  _preflight_check.py  _verify_rls_005.py  check_coverage.py  f31_backfill.py  f32_migrate_pilot_library.py  migrate.py
nuqe_engine/tests/: conftest.py  test_audit.py  test_audit_isolation.py  test_audit_unit.py  test_cli.py  test_cli_unit.py  test_deadline.py  test_engine_connect.py  test_engine_integration.py  test_engine_transactional.py  test_evidence.py  test_integration_stability.py  test_jsparser_unit.py  test_loader.py  test_requirement.py  test_rls_isolation.py  test_sync.py  test_trigger.py  test_validator.py  test_validator_crossfield.py
nuqe_engine/tests/api/: __init__.py  conftest.py  test_auth.py  test_auth0.py  test_cases.py  test_cases_audit.py  test_cases_ingest.py  test_cases_read.py  test_e2e_smoke.py  test_events.py  test_health.py  test_library.py  test_logging.py  test_metrics.py  test_request_id_middleware.py  test_scheduler.py  test_scheduler_lifespan.py  test_sentry.py
nuqe_engine/tests/fixtures/: Nuqe_Obligation_Library.xlsx
spec/: ARCHITECTURE.md  dependencies.md  test_registry.md
spec/components/: 01_database.md  02_auth.md  03_cases_api.md  04_communications_api.md  05_deadlines_api.md  06_deadline_engine.md  07_communication_engine.md  08_compliance_engine.md  09_model_router.md  10_pii_tokeniser.md  11_knowledge_layer.md  12_regulatory_monitor.md  13_metrics_api.md  14_settings_api.md  15_webhooks.md  16_frontend_dashboard.md  17_frontend_case_view.md  18_frontend_analytics.md  19_frontend_monitoring.md  20_channels.md
web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
web/e2e/: analytics.spec.js  case-view.spec.js  dashboard.spec.js  monitoring-settings.spec.js
web/src/: App.jsx  index.css  main.jsx
web/src/api/: client.js
web/src/components/: AnalyticsDashboard.jsx  CaseView.jsx  ComplaintsDashboard.jsx  EmailComposer.jsx  PendingActionCard.jsx  RegulatoryMonitoringScreen.jsx  SettingsScreen.jsx  Sidebar.jsx
web/src/components/shared/: ErrorBanner.jsx  LoadingSkeleton.jsx  PrivateRoute.jsx
web/src/context/: AuthContext.jsx  PendingActionsContext.jsx
web/src/hooks/: useAiActions.js  useCase.js  useCases.js  useCommunications.js  useMetrics.js
web/src/pages/: AllCases.jsx  AuditTrail.jsx  Complaints.jsx  ConsumerDuty.jsx  FosReferrals.jsx  Inbox.jsx  LiveChat.jsx  LoginPage.jsx  MetricsDashboard.jsx  PostalQueue.jsx  RegUpdates.jsx  RegulatoryMonitoring.jsx
