[project]
name = "nuqe-engine"
version = "0.1.0"
description = "Nuqe deterministic obligation engine. Consumes the v1 obligation library."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Vimal Kumar" }]

dependencies = [
    "openpyxl>=3.1.5",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.0",
    "python-dateutil>=2.9.0",
    "holidays>=0.57",
    "click>=8.1.7",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "structlog>=24.4.0",
    "apscheduler>=3.10.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "python-multipart>=0.0.9",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "freezegun>=1.5.0",
    "httpx>=0.27.0",
]

[project.scripts]
nuqe-engine = "nuqe_engine.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nuqe_engine*", "nuqe_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=nuqe_engine",
    "--cov=nuqe_api",
    "--cov-report=term-missing",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=80",
]
markers = [
    "integration: marks tests that require a live Postgres database",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]  # B008: FastAPI Query/Security/Depends in defaults is idiomatic

[tool.coverage.run]
branch = true
source = ["nuqe_engine", "nuqe_api"]
omit = [
    "*/__init__.py",
    "*/migrations/*",
    "tests/*",
    "scripts/*",
    # Integration-only modules: covered by docker-based integration tests, not unit tests.
    # Remove each entry here only when a unit-test suite covers it directly.
    "nuqe_engine/engine.py",
    "nuqe_engine/sync.py",
    "nuqe_engine/trigger.py",
    "nuqe_engine/deadline.py",
    "nuqe_engine/evidence.py",
    "nuqe_engine/requirement.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
